tests/consteval_diag_error_at_source_location_of.stderr
tests/consteval_diag_error_at_source_location_of.hop:8:47: error: HOP2075: consteval error: anchored
